Added logo and new graphics. Game wait to start.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Flappybird bird clone</title>
+    <title>Base Jump</title>
     <script type="text/javascript" src="libs/phaser.js"></script>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </head>
