--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Base Jump</title>
     <script type="text/javascript" src="libs/phaser.js"></script>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="build/bundle.js"></script>
 </head>
 
 <body>
