--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Base Jump</title>
     <script type="text/javascript" src="libs/phaser.js"></script>
     <script type="text/javascript" src="build/bundle.js"></script>
+    <script src="http://media.admeen.com/branding/api.js"></script>
 </head>
 
 <body>
@@ -19,6 +20,8 @@
         ga('create', 'UA-73400150-1', 'auto');
         ga('send', 'pageview');
 
+
+        admeen("init",{name:"Base jump game"});
     </script>
 </body>
 </html>
