--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Base Jump</title>
-    <script type="text/javascript" src="libs/phaser.js"></script>
-    <script type="text/javascript" src="build/bundle.js"></script>
-    <script src="http://media.admeen.com/branding/api.js"></script>
+    <title>Catan Scoreboard</title>
 </head>
-
 <body>
-    <div id="gameDiv"> </div>
+    <div id="app"> Hello this is ...</div>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-73400150-1', 'auto');
-        ga('send', 'pageview');
-
-
-        admeen("init",{name:"Base jump game"});
-    </script>
+    <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
